testsuite/tests/parser/should_fail/T17865.hs
module T17865 where

data T = 'MkT
